# PotatoEcosystem-core

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  开发规范.md  项目说明.md
benches/: router_bench.rs
examples/: basic_usage.rs
src/: lib.rs  main.rs
src/api/: ipc.rs  mod.rs  sdk.rs
src/core/: config.rs  mod.rs
src/module/: dependency.rs  lifecycle.rs  loader.rs  manager.rs  metadata.rs  mod.rs  parser.rs  registry.rs
src/module/runtime/: mod.rs
src/router/: concurrency.rs  event.rs  event_bus.rs  mod.rs  queue.rs  request.rs  route_table.rs  router.rs  validator.rs
src/utils/: error.rs  id.rs  logger.rs  metrics.rs  mod.rs
tests/: config_test.rs  e2e_test.rs  event_config_integration_test.rs  logging_metrics_test.rs  router_integration_test.rs
开发计划/: 00-开发计划总览.md
开发计划/Phase1-项目初始化与基础架构/: 任务清单.md
开发计划/Phase2-中心路由系统/: 任务清单.md  完成总结.md
开发计划/Phase3-模块管理系统/: 任务清单.md  完成总结.md
开发计划/Phase4-事件总线与配置管理/: 任务清单.md  完成总结.md
开发计划/Phase5-日志系统与性能监控/: 任务清单.md  完成总结.md
开发计划/Phase6-SDK与API层/: 任务清单.md  完成总结.md
开发计划/Phase7-集成测试与性能优化/: 任务清单.md  完成总结.md
开发计划/Phase8-文档完善与发布准备/: 任务清单.md  完成总结.md
技术文档/: 01-架构设计.md  02-中心路由系统设计.md  03-模块管理系统设计.md  04-文件识别系统设计.md  05-与基础层协作.md  05-资源管理系统设计.md  06-接口定义.md  07-数据结构设计.md  08-代码模块划分.md  09-类和函数设计.md  10-开发指南.md  11-测试手册.md  12-API完整索引.md  13-类和函数完整索引.md  14-接口完整索引.md  15-文件结构完整索引.md  SDK接口对接规范.md  通用开发规范.md
需求文档/: 01-产品概述.md  02-功能需求.md  03-用户故事.md  04-业务流程.md  05-非功能需求.md
